fix for styles on Firefox that appear on next line.

--- a/sass/components/_suggestion-list.scss
+++ b/sass/components/_suggestion-list.scss
@@ -12,11 +12,12 @@
     }
 
     .badge {
-        float: right;
+        position: absolute;
+        top: 8px;
+        right: 10px;
         color: rgb(61, 60, 64);
         background: #CECECF;
         font-size: 10px;
-        margin-top: 2px;
     }
 }
 
